// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServerSideExceptionDialog should render an ServerSideException Alert correctly 1`] = `
<Fragment>
  Trans(i18nKey=error1, {"0":"hi","joinArrays":"\\n"})
  <Button
    aria-label="Show Stack Trace"
    onClick={[Function]}
    variant="link"
  >
    Show Stack Trace
  </Button>
  <Modal
    actions={
      <Button
        aria-label="Close"
        onClick={[Function]}
      >
        Trans(i18nKey=close)
      </Button>
    }
    appendTo={[Function]}
    aria-describedby=""
    aria-label=""
    aria-labelledby=""
    className=""
    hasNoBodyWrapper={false}
    isOpen={false}
    onClose={[Function]}
    ouiaSafe={true}
    showClose={true}
    title="Trans(i18nKey=serverSideError)"
    titleIconVariant={null}
    titleLabel=""
    variant="default"
  >
    <Title
      headingLevel="h1"
      size="md"
    >
      Error1: message1
    </Title>
    <Text
      style={
        Object {
          "whiteSpace": "pre-wrap",
        }
      }
    >
      1.1
1.2
1.3
    </Text>
    <Text>
      Caused By
    </Text>
    <Title
      headingLevel="h1"
      size="md"
    >
      Error2: message2
    </Title>
    <Text
      style={
        Object {
          "whiteSpace": "pre-wrap",
        }
      }
    >
      2.1
2.2
2.3
    </Text>
  </Modal>
</Fragment>
`;

exports[`ServerSideExceptionDialog should render an ServerSideException Modal correctly 1`] = `
<Fragment>
  Trans(i18nKey=error1, {"0":"hi","joinArrays":"\\n"})
  <Button
    aria-label="Show Stack Trace"
    onClick={[Function]}
    variant="link"
  >
    Show Stack Trace
  </Button>
  <Modal
    actions={
      <Button
        aria-label="Close"
        onClick={[Function]}
      >
        Trans(i18nKey=close)
      </Button>
    }
    appendTo={[Function]}
    aria-describedby=""
    aria-label=""
    aria-labelledby=""
    className=""
    hasNoBodyWrapper={false}
    isOpen={true}
    onClose={[Function]}
    ouiaSafe={true}
    showClose={true}
    title="Trans(i18nKey=serverSideError)"
    titleIconVariant={null}
    titleLabel=""
    variant="default"
  >
    <Title
      headingLevel="h1"
      size="md"
    >
      Error1: message1
    </Title>
    <Text
      style={
        Object {
          "whiteSpace": "pre-wrap",
        }
      }
    >
      1.1
1.2
1.3
    </Text>
    <Text>
      Caused By
    </Text>
    <Title
      headingLevel="h1"
      size="md"
    >
      Error2: message2
    </Title>
    <Text
      style={
        Object {
          "whiteSpace": "pre-wrap",
        }
      }
    >
      2.1
2.2
2.3
    </Text>
  </Modal>
</Fragment>
`;
